--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>Flappy Bird</title>
 	<link rel="stylesheet" href="css/index.css">
+	<script src="js/touch-0.2.14.min.js"></script>
 	<script src="js/index.js"></script>
 </head>
 <body>
-	
 	<canvas id="canvas" width="320" height="568"></canvas>
 	<img src="./image/button_play.png" alt="" id="btn1">
 	<img src="./image/text_game_over.png" alt="" id="btn2">
-
 </body>
 </html>
